# pso-logistic-regression

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
examples/Binary_Classification/: binary_demo.py  binary_demo2.py  binary_demo3.py  binary_example.py  diabetes_binomial_classification.py  diabetes_binomial_classification_modified.py
examples/Multinomial_Classification/: multinomial_demo1.py  multinomial_demo2.py  multinomial_demo3.py  multinomial_example.py
psolr/: __init__.py  model.py
