[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psolr"
version = "0.1.1"
description = "Metaheuristic-Optimized Logistic Regression (PSO-LR / MOLR)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Koustav Dutta", email = "koustavdutta.dgp@gmail.com"}
]

dependencies = [
    "numpy>=1.20",
    "scikit-learn>=1.2"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console", 
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Software Development :: Libraries :: Python Modules",
    "Natural Language :: English"
]

[project.urls]
Repository = "https://github.com/JEET-123/pso-logistic-regression"
